--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="form-group">
             <button class="btn btn-primary" ng-click="check()">Check If Too Much</button>
         </div>
-        <div class="form-group message">
+        <div id="msg" class="form-group message">
             <!-- Your message can go here. -->
             {{message}}
         </div>
